--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/Brazilian-Cheese-Bread.html">Brazilian Cheese Bread</a></li>
+        <li><a href="recipes/Brazilian-Chicken-Croquettes.html">Brazilian Chicken Croquettes</a></li>
+        <li><a href="recipes/Brigadeiro.html">Brigadeiro</a></li>
+    </ul>
 </body>
 </html>
